[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "NVPXT builtins like `__syncthreads()` and `blockIdx.x`"
documentation = "https://docs.rs/nvptx-builtins"
keywords = ["nvptx", "builtins", "cuda", "gpu"]
license = "MIT OR Apache-2.0"
name = "nvptx-builtins"
repository = "https://github.com/japaric/nvptx-builtins"
version = "0.1.0"
